--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^0.20.0",
+        "dotenv": "^8.2.0",
         "lodash": "^4.17.20",
         "restify": "^8.5.1"
     },
